--- a/src/layouts/MarkdownPostLayout.astro
+++ b/src/layouts/MarkdownPostLayout.astro
@@ -2,10 +2,12 @@
 import Gallery from 'components/Gallery.astro';
 import { decorateTitle } from 'helpers';
 const { frontmatter } = Astro.props;
+
+const title = decorateTitle(frontmatter.title);
 ---
 <div class="flex flex-col gap-14">
-  <h1 class="font-bold text-3xl sm:text-5xl text-center sm:text-left leading-snug sm:leading-snug">{decorateTitle(frontmatter.title)}</h1>
-  <Gallery data={frontmatter.cover} />
+  <h1 class="font-bold text-3xl sm:text-5xl text-center sm:text-left leading-snug sm:leading-snug">{title}</h1>
+  <Gallery images={frontmatter.images} />
   <article class="prose lg:prose-xl dark:prose-invert mx-auto">
     <slot />
   </article>
