--- a/src/components/Gallery.astro
+++ b/src/components/Gallery.astro
@@ -3,9 +3,10 @@ import { Image } from 'astro:assets';
 
 interface Props {
   images?: Array<ImageMetadata>;
+  link?: string;
 }
 
-const { images } = Astro.props;
+const { images, link } = Astro.props;
 ---
 
 <div class="w-full max-w-7xl mx-auto">
@@ -17,7 +18,9 @@ const { images } = Astro.props;
         <div class="w-3 h-3 bg-green-500 block rounded-full"></div>
       </div>
       <div class="hidden md:block">
-        <input id="search-box" type="text" value="preview.dev" class="bg-[#251b44] dark:bg-gray-200/60 text-gray-200 dark:text-gray-600 px-2 py-1 text-center text-xs rounded-md focus:border-0 focus:outline-none tracking-wide" readonly />
+        <a id="search-box" class="bg-[#251b44] dark:bg-gray-200/60 text-gray-200 dark:text-gray-600 px-2 py-1 text-center text-xs rounded-md focus:border-0 focus:outline-none tracking-wide w-[200px] block lowercase" href={link} target="_blank" rel="noreferrer noopener">
+          {link ? 'View Site' : 'No Preview'}
+        </a>
       </div>
       <div class="text-gray-200 dark:text-gray-600 flex gap-1">
         <button id="prev-button" class="px-2 bg-[#251b44] dark:bg-gray-100 rounded-sm">{'<'}</button>
