--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,14 +1,24 @@
 ---
-import Layout from 'layouts/Layout.astro';
-import Jumbotron from 'components/Jumbotron.astro';
-import Featured from 'components/Featured.astro';
-import CatchMe from 'components/CatchMe.astro';
-import Footer from 'components/Footer.astro';
+import Layout from "layouts/Layout.astro";
+import Jumbotron from "components/Jumbotron.astro";
+import Featured from "components/Featured.astro";
+import CatchMe from "components/CatchMe.astro";
+import Footer from "components/Footer.astro";
+
+import { getCollection } from "astro:content";
+
+const allProjects = await getCollection("projects");
+const projectsWithImageFull = allProjects.filter(
+    (project) => project.data.image_full,
+);
+const projects = projectsWithImageFull
+    .sort(() => Math.random() - 0.5)
+    .slice(0, 3);
 ---
 
 <Layout>
-	<Jumbotron />
-	<Featured />
-	<CatchMe />
-	<Footer />
+    <Jumbotron />
+    <Featured projects={projects} />
+    <CatchMe />
+    <Footer />
 </Layout>
