--- a/src/pages/projects/index.astro
+++ b/src/pages/projects/index.astro
@@ -1,20 +1,22 @@
 ---
-import Layout from 'layouts/Layout.astro';
-import Works from 'components/Works.astro';
-import Footer from 'components/Footer.astro';
+import Layout from "layouts/Layout.astro";
+import Works from "components/Works.astro";
+import Footer from "components/Footer.astro";
 import { getCollection } from "astro:content";
 
 const projects = await getCollection("projects");
 ---
 
 <Layout title="projects">
-	<div class="flex flex-col justify-center xs:items-center my-20">
-		<h1 class="w-full font-bold text-6xl xs:text-7xl tracking-wide flex flex-row flex-wrap sm:justify-center gap-y-2 gap-x-4">
-			<span>My</span>
-			<span class="gradient-text">recent</span>
-			<span>works</span>
-		</h1>
-	</div>
-	<Works projects={projects} />
-	<Footer />
+    <div class="flex flex-col justify-center xs:items-center my-20">
+        <h1
+            class="w-full font-bold text-6xl xs:text-7xl tracking-wide flex flex-row flex-wrap sm:justify-center gap-y-2 gap-x-4"
+        >
+            <span>My</span>
+            <span class="gradient-text">recent</span>
+            <span>works</span>
+        </h1>
+    </div>
+    <Works projects={projects} />
+    <Footer />
 </Layout>
